freesia/manifests/temporis/influxdb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb2

spec:
  routes:
    - kind: Rule
      match: Host(`influxdb2.harvestasya.org`)
      services:
        - name: influxdb2
          port: 80
